--- a/index.html
+++ b/index.html
@@ -3,30 +3,66 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mobile Voice Recorder</title>
+    <title>🎤 Voice Recorder</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <style>
+        body { 
+            display: flex; 
+            justify-content: center; 
+            align-items: center; 
+            height: 100vh; 
+            background: linear-gradient(135deg, #6e8efb, #a777e3); 
+            color: white;
+        }
+        .container {
+            max-width: 400px; 
+            background: white; 
+            padding: 20px; 
+            border-radius: 10px; 
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); 
+            text-align: center;
+        }
+        .btn {
+            width: 100%; 
+            margin-bottom: 10px; 
+            font-size: 18px;
+        }
+        #audioPlayback {
+            width: 100%;
+            margin-top: 10px;
+        }
+        .hidden { display: none; }
+    </style>
 </head>
 <body>
 
-    <h2>🎤 Mobile Voice Recorder</h2>
-    <p id="status">Click "Grant Access" before recording.</p>
+    <div class="container">
+        <h2 class="text-dark">🎤 Voice Recorder</h2>
+        <p id="statusText" class="text-muted">Press "Grant Access" before recording.</p>
 
-    <button onclick="requestMicrophone()">🎙 Grant Microphone Access</button>
-    <button onclick="startRecording()" disabled>🔴 Start Recording</button>
-    <button onclick="stopRecording()" disabled>⏹ Stop</button>
-    <audio id="audioPlayback" controls></audio>
+        <button id="grantPermissionBtn" class="btn btn-primary" onclick="requestMicPermission()">🎙 Grant Microphone Access</button>
+        <button id="recordBtn" class="btn btn-danger hidden" onclick="startRecording()">🔴 Start Recording</button>
+        <button id="stopBtn" class="btn btn-dark hidden" onclick="stopRecording()">⏹ Stop</button>
+
+        <audio id="audioPlayback" class="hidden" controls></audio>
+        <a id="downloadLink" class="hidden btn btn-success mt-2" download="recording.wav">⬇️ Download</a>
+    </div>
 
     <script>
         let mediaRecorder;
         let audioChunks = [];
 
-        async function requestMicrophone() {
+        // Request microphone permission
+        async function requestMicPermission() {
             try {
                 let stream = await navigator.mediaDevices.getUserMedia({ audio: true });
-                document.querySelector("button[onclick='startRecording()']").disabled = false;
-                document.getElementById("status").innerText = "Microphone Access Granted! You can record now.";
-                stream.getTracks().forEach(track => track.stop()); // Close mic after permission check
+                document.getElementById("grantPermissionBtn").classList.add("hidden");
+                document.getElementById("recordBtn").classList.remove("hidden");
+                document.getElementById("statusText").innerText = "Microphone Access Granted! You can record now.";
+                stream.getTracks().forEach(track => track.stop()); // Stop mic after permission check
             } catch (error) {
-                alert("Microphone access denied! Please allow permissions in settings.");
+                alert("Microphone access denied! Please allow microphone permissions in browser settings.");
                 console.error(error);
             }
         }
@@ -45,13 +81,18 @@
                     let audioBlob = new Blob(audioChunks, { type: "audio/wav" });
                     let audioUrl = URL.createObjectURL(audioBlob);
                     document.getElementById("audioPlayback").src = audioUrl;
+                    document.getElementById("downloadLink").href = audioUrl;
+                    document.getElementById("audioPlayback").classList.remove("hidden");
+                    document.getElementById("downloadLink").classList.remove("hidden");
+                    document.getElementById("statusText").innerText = "Recording Finished!";
                 };
 
                 mediaRecorder.start();
-                document.querySelector("button[onclick='startRecording()']").disabled = true;
-                document.querySelector("button[onclick='stopRecording()']").disabled = false;
+                document.getElementById("recordBtn").classList.add("hidden");
+                document.getElementById("stopBtn").classList.remove("hidden");
+                document.getElementById("statusText").innerText = "Recording...";
             } catch (error) {
-                alert("Microphone access denied! Try enabling permissions.");
+                alert("Microphone access denied! Please allow microphone permissions.");
                 console.error(error);
             }
         }
@@ -59,8 +100,8 @@
         function stopRecording() {
             if (mediaRecorder) {
                 mediaRecorder.stop();
-                document.querySelector("button[onclick='startRecording()']").disabled = false;
-                document.querySelector("button[onclick='stopRecording()']").disabled = true;
+                document.getElementById("recordBtn").classList.remove("hidden");
+                document.getElementById("stopBtn").classList.add("hidden");
             }
         }
     </script>
